# auth/controllers/AccountService.js
@@ -2,18 +2,18 @@
 
 var db = require('sample-db');
 var logger = require('sample-logger');
-var TABLE_NAME = 'users';
+var TABLE_NAME = 'account';
 
 /**
- * ユーザー追加
+ * ユーザ追加
  */
-exports.createUser = function(args, res, next) {
+exports.createAccount = function(args, res, next) {
   var params = args.body.value;
   var query = db.insert(TABLE_NAME, params);
 
   query.then(function(insertId) {
     res.setHeader('Content-Type', 'application/json');
-    res.setHeader('Location', 'https://node.local-fw.com/v1/users/' + insertId);
+    res.setHeader('Location', 'https://node.local-fw.com/v1/accounts/' + insertId);
     res.status(201);
     res.end(JSON.stringify({"insertId": insertId}));
   }).catch(function (error) {
@@ -22,10 +22,10 @@ exports.createUser = function(args, res, next) {
 };
 
 /**
- * ユーザー削除
+ * ユーザ削除
  */
-exports.deleteUser = function(args, res, next) {
-  var where = {'userId' : args.userId.value };
+exports.deleteAccount = function(args, res, next) {
+  var where = {'accountId' : args.accountId.value };
   var query = db.delete(TABLE_NAME, where);
 
   query.then(function(rows) {
@@ -38,11 +38,11 @@ exports.deleteUser = function(args, res, next) {
 };
 
 /**
- * ユーザー取得
+ * ユーザ取得
  */
-exports.getUser = function(args, res, next) {
-  var sql = 'SELECT * FROM users where user_id = ?';
-  var param = args.userId.value;
+exports.getAccount = function(args, res, next) {
+  var sql = 'SELECT * FROM + TABLE_NAME + where account_id = ?';
+  var param = args.accountId.value;
   var query = db.getOne(sql, param);
 
   query.then(function(row) {
@@ -57,12 +57,21 @@ exports.getUser = function(args, res, next) {
   })};
 
 /**
- * ユーザー一覧取得
+ * ユーザ一覧取得
  */
-exports.listUser = function(args, res, next) {
+exports.listAccount = function(args, res, next) {
   var param = {};
-  var sql   = 'SELECT * FROM users';
-  var query = db.query(sql, param);
+  var sql   = "SELECT * FROM "+ TABLE_NAME;
+  var query = db.query({
+    sql: sql,
+    parameter: param,
+    typeCast: function (field, next) {
+      if (field.type === 'LONGLONG') {
+        return field.string();
+      }
+      return next();
+    },
+  });
 
   query.then(function(rows) {
     res.setHeader('Content-Type', 'application/json');
@@ -73,16 +82,16 @@ exports.listUser = function(args, res, next) {
 };
 
 /**
- * ユーザー更新
+ * ユーザ更新
  */
-exports.updateUser = function(args, res, next) {
+exports.updateAccount = function(args, res, next) {
   var param = args.body.value;
-  var where = {user_id: args.userId.value};
+  var where = {account_id: args.accountId.value};
   var query = db.update(TABLE_NAME, param, where);
 
   query.then(function(row) {
     res.setHeader('Content-Type', 'application/json');
-    res.setHeader('Location', 'https://node.local-fw.com/v1/users/' + args.userId.value);
+    res.setHeader('Location', 'https://node.local-fw.com/v1/accounts/' + args.accountId.value);
     res.status(204);
     res.end();
   }).catch(function (error) {
